Open ChromeOS clock settings on the UI thread instead of File.

ChromeOS clock settings code accesses BrowserProcessImpl::profile_manager()
which should be accessed on the UI thread. Since this code is simply opening
a new window, there is no need to run it on a different thread.

BUG=657704
TEST=Manual, change system clock, go to https://expired.badssl.com and launch clock settings.

Review-Url: https://codereview.chromium.org/2459193003
Cr-Commit-Position: refs/heads/master@{#429182}