chrome/browser/interstitials/chrome_controller_client.cc
@@ -42,21 +42,18 @@ using content::Referrer;
 
 namespace {
 
-void LaunchDateAndTimeSettingsOnFile() {
+#if !defined(OS_CHROMEOS)
+void LaunchDateAndTimeSettingsOnFileThread() {
   DCHECK_CURRENTLY_ON(content::BrowserThread::FILE);
 // The code for each OS is completely separate, in order to avoid bugs like
-// https://crbug.com/430877 .
+// https://crbug.com/430877 . ChromeOS is handled on the UI thread.
 #if defined(OS_ANDROID)
   chrome::android::OpenDateAndTimeSettings();
 
-#elif defined(OS_CHROMEOS)
-  chrome::ShowSettingsSubPageForProfile(ProfileManager::GetActiveUserProfile(),
-                                        chrome::kDateTimeSubPage);
-
 #elif defined(OS_LINUX)
   struct ClockCommand {
-    const char* pathname;
-    const char* argument;
+    const char* const pathname;
+    const char* const argument;
   };
   static const ClockCommand kClockCommands[] = {
       // Unity
@@ -120,6 +117,7 @@ void LaunchDateAndTimeSettingsOnFile() {
 #endif
   // Don't add code here! (See the comment at the beginning of the function.)
 }
+#endif
 
 }  // namespace
 
@@ -147,9 +145,16 @@ bool ChromeControllerClient::CanLaunchDateAndTimeSettings() {
 }
 
 void ChromeControllerClient::LaunchDateAndTimeSettings() {
+  DCHECK_CURRENTLY_ON(content::BrowserThread::UI);
+
+#if defined(OS_CHROMEOS)
+  chrome::ShowSettingsSubPageForProfile(ProfileManager::GetActiveUserProfile(),
+                                        chrome::kDateTimeSubPage);
+#else
   content::BrowserThread::PostTask(
       content::BrowserThread::FILE, FROM_HERE,
-      base::Bind(&LaunchDateAndTimeSettingsOnFile));
+      base::Bind(&LaunchDateAndTimeSettingsOnFileThread));
+#endif
 }
 
 void ChromeControllerClient::GoBack() {
